create manual ingress

--- a/infra/config/dev/app/backend/values.yaml
+++ b/infra/config/dev/app/backend/values.yaml
@@ -6,20 +6,6 @@ app:
   component: api           # Component type (api, frontend, database, etc.)
   tier: backend            # Application tier
 
-# INGRESS CONFIGURATION - Using legacy annotation to bypass webhook
+# INGRESS CONFIGURATION - Using manual template to bypass webhook
 ingress:
   enabled: true
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-  hosts:
-    - host: dev.sharkapp.local
-      paths:
-        - path: /api
-          pathType: Prefix
-        - path: /uploads
-          pathType: Prefix
