--- a/infra/config/dev/app/frontend/values.yaml
+++ b/infra/config/dev/app/frontend/values.yaml
@@ -86,17 +86,6 @@ angular:
     enableServiceWorker: false  # Disable service worker in development
     enableI18n: false          # Disable internationalization
 
-# INGRESS CONFIGURATION - Using legacy annotation to bypass webhook
+# INGRESS CONFIGURATION - Using manual template to bypass webhook
 ingress:
   enabled: true
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-  hosts:
-    - host: dev.sharkapp.local
-      paths:
-        - path: /
-          pathType: Prefix
