--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -36,7 +36,7 @@ kube-prometheus-stack:
         cpu: "200m"
         memory: "256Mi"
     
-    # Disable helm ingress - using manual ingress files
+    # Disable ingress - using Gateway API instead
     ingress:
       enabled: false
     
