update namespaces for gateway-api

--- a/infra/addons/gateway-api/values.yaml
+++ b/infra/addons/gateway-api/values.yaml
@@ -37,4 +37,4 @@ routes:
     service:
       name: prometheus-stack-dev-grafana
       port: 80
-      namespace: monitoring-system
+      namespace: dev
