--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -49,7 +49,7 @@ kube-prometheus-stack:
     additionalDataSources:
       - name: Loki
         type: loki
-        url: http://loki-dev.monitoring-system.svc.cluster.local:3100
+        url: http://loki-dev.dev.svc.cluster.local:3100
         access: proxy
         isDefault: false
     
