--- a/infra/addons/gateway-api/values.yaml
+++ b/infra/addons/gateway-api/values.yaml
@@ -14,7 +14,7 @@ routes:
     service:
       name: frontend-dev
       port: 80
-      namespace: app
+      namespace: dev
   
   backend:
     enabled: true
@@ -24,12 +24,12 @@ routes:
         service:
           name: backend-dev
           port: 8000
-          namespace: app
+          namespace: dev
       - path: /uploads
         service:
           name: backend-dev
           port: 8000
-          namespace: app
+          namespace: dev
   
   grafana:
     enabled: true
