HTTPRoutes needed to explicitly reference the listener section name when connecting to the Gateway across namespaces

--- a/infra/addons/gateway-api/templates/httproute-backend.yaml
+++ b/infra/addons/gateway-api/templates/httproute-backend.yaml
@@ -8,6 +8,7 @@ spec:
   parentRefs:
   - name: {{ .Values.gateway.name }}
     namespace: {{ .Release.Namespace }}
+    sectionName: http
   hostnames:
   - {{ .Values.routes.backend.hostname | quote }}
   rules:
