add route and api-gateway

--- a/infra/addons/gateway-api/templates/gateway.yaml
+++ b/infra/addons/gateway-api/templates/gateway.yaml
@@ -13,4 +13,7 @@ spec:
     {{- if .hostname }}
     hostname: {{ .hostname | quote }}
     {{- end }}
+    allowedRoutes:
+      namespaces:
+        from: All
   {{- end }}
