--- a/infra/addons/gateway-api/templates/httproute-backend.yaml
+++ b/infra/addons/gateway-api/templates/httproute-backend.yaml
@@ -3,10 +3,11 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: backend-route
-  namespace: {{ .Values.routes.backend.paths | first | dig "service" "namespace" "app" }}
+  namespace: {{ .Values.routes.backend.paths | first | dig "service" "namespace" "dev" }}
 spec:
   parentRefs:
   - name: {{ .Values.gateway.name }}
+    namespace: {{ .Release.Namespace }}
   hostnames:
   - {{ .Values.routes.backend.hostname | quote }}
   rules:
@@ -18,5 +19,6 @@ spec:
     backendRefs:
     - name: {{ .service.name }}
       port: {{ .service.port }}
+      namespace: {{ .service.namespace }}
   {{- end }}
 {{- end }}
