upgate with gateway class

--- a/infra/addons/gateway-api/values.yaml
+++ b/infra/addons/gateway-api/values.yaml
@@ -1,6 +1,6 @@
 gateway:
   name: e-commerce-gateway
-  gatewayClassName: nginx-gateway
+  gatewayClassName: eg
   listeners:
     - name: http
       protocol: HTTP
