--- a/infra/addons/gateway-api/templates/gatewayclass.yaml
+++ b/infra/addons/gateway-api/templates/gatewayclass.yaml
@@ -1,6 +1,6 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: GatewayClass
 metadata:
-  name: nginx-gateway
+  name: eg
 spec:
-  controllerName: gateway.nginx.org/nginx-gateway-controller
+  controllerName: gateway.envoyproxy.io/gatewayclass-controller
