--- a/infra/addons/gateway-api/templates/httproute-grafana.yaml
+++ b/infra/addons/gateway-api/templates/httproute-grafana.yaml
@@ -1,22 +1,31 @@
 {{- if .Values.routes.grafana.enabled }}
+# HTTPRoute for Grafana monitoring dashboard
+# Provides access to Grafana UI on a separate hostname for monitoring and observability
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: grafana-route
+  name: grafana-route  # Name of the HTTPRoute resource
+  # Deploy in the same namespace as the Grafana service
   namespace: {{ .Values.routes.grafana.service.namespace }}
 spec:
+  # Reference to the Gateway this route should attach to
   parentRefs:
-  - name: {{ .Values.gateway.name }}
-    namespace: {{ .Release.Namespace }}
+  - name: {{ .Values.gateway.name }}  # Gateway name
+    namespace: {{ .Release.Namespace }}  # Gateway namespace (cross-namespace reference)
+  
+  # Dedicated hostname for Grafana access (e.g., "dev.grafana.local")
   hostnames:
   - {{ .Values.routes.grafana.hostname | quote }}
+  
+  # Routing rules for Grafana dashboard access
   rules:
-  - matches:
+  - matches:  # Match all requests to Grafana
     - path:
-        type: PathPrefix
-        value: /
+        type: PathPrefix  # Match all paths under root
+        value: /  # Root path - Grafana serves its UI from root
+    # Backend service for Grafana dashboard
     backendRefs:
-    - name: {{ .Values.routes.grafana.service.name }}
-      port: {{ .Values.routes.grafana.service.port }}
-      namespace: {{ .Values.routes.grafana.service.namespace }}
+    - name: {{ .Values.routes.grafana.service.name }}  # Grafana service name (from Prometheus stack)
+      port: {{ .Values.routes.grafana.service.port }}  # Grafana service port (usually 80)
+      namespace: {{ .Values.routes.grafana.service.namespace }}  # Service namespace
 {{- end }}
