--- a/infra/config/dev/monitoring-system/alloy/values.yaml
+++ b/infra/config/dev/monitoring-system/alloy/values.yaml
@@ -143,6 +143,6 @@ alloy:
           }
           external_labels = {
             cluster = "dev",
-            environment = "development"
+            environment = "development",
           }
         }
