--- a/infra/addons/traefik/values.yaml
+++ b/infra/addons/traefik/values.yaml
@@ -21,7 +21,7 @@ deployment:
 # Service configuration
 service:
   enabled: true
-  type: LoadBalancer
+  type: NodePort
 
 # Ports configuration
 ports:
