change serice type of traefik svc for dev

--- a/infra/config/dev/gateway-system/traefik/values.yaml
+++ b/infra/config/dev/gateway-system/traefik/values.yaml
@@ -5,9 +5,7 @@ deployment:
   replicas: 1
 
 service:
-  enabled: true
-  type: NodePort
-  annotations: {}
+  type: ClusterIP
 
 ingressRoute:
   dashboard:
