change serice type of traefik svc in common

--- a/infra/addons/traefik/values.yaml
+++ b/infra/addons/traefik/values.yaml
@@ -21,7 +21,7 @@ deployment:
 # Service configuration
 service:
   enabled: true
-  type: NodePort
+  type: ClusterIP
 
 # Ports configuration
 ports:
